@@ -35,6 +35,7 @@ class EP : public ChartPlugin
     void prefDialog (QWidget *);
     void loadSettings ();
     void saveSettings ();
+    void savePixelspace ();
 
   protected:
     QColor neutralColor;
