@@ -38,6 +38,7 @@ class Line : public ChartPlugin
     void loadSettings ();
     void saveSettings ();
     PlotLine * getBoolLine ();
+    void savePixelspace ();
   
   protected:
     QColor color;
